--- a/REL-11257/Jenkinsfile
+++ b/REL-11257/Jenkinsfile
@@ -4,27 +4,23 @@ pipeline {
             label 'v2_builder'
         }
     }
-    stages {
-        stage('Clean npm-dev'){
-            steps {
-              echo "execute artifactory-cleaner.py"
-  //              def options = ""
-              if (${MAX_DAYS}) {
-                 options = options + " -d ${MAX_DAYS}"
-              }
-              if (${VERBOSE}) {
-                 options = options + " -v"
-              }
-              if (${SKIP_LIST}) {
-                 options = options + " -S ${SKIP_LIST}"
-              }
-              //                if (${DO_DELETE}) {
-//                   options = options + " -D"
-//                }
-               withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'c376347e-4245-49fc-be2c-b4aa0ddce81f',usernameVariable: 'NAME', passwordVariable: 'WORD']]) {
-                  sh "python REL-11257/npm-dev-cleaner.py ${options} -u ${NAME} -p ${WORD}"
-               }
-            }
+  stages {
+    stage ('Clean npm-dev artifactory repo') {
+      steps {
+        echo 'Calling script'
+        if (${env.MAX_DAYS}) {
+          options = options + " -d ${env.MAX_DAYS}"
         }
+        if (${env.VERBOSE}) {
+          options = options + " -v"
+        }
+        if (${env.SKIP_LIST}) {
+          options = options + " -S ${env.SKIP_LIST}"
+        }
+        withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'c376347e-4245-49fc-be2c-b4aa0ddce81f',usernameVariable: 'NAME', passwordVariable: 'WORD']]) {
+          sh "python REL-11257/npm-dev-cleaner.py ${options} -u ${NAME} -p ${WORD}"
+        }
+      }
     }
+  }
 }
