--- a/REL-11257/Jenkinsfile
+++ b/REL-11257/Jenkinsfile
@@ -4,34 +4,22 @@ pipeline {
             label 'v2_builder'
         }
     }
-  parameters {
-        string(name: 'MAX_DAYS', defaultValue: '30', description: 'Delete files older than this?')
-        booleanParam(name: 'VERBOSE', defaultValue: false, description: 'Toggle this value')
-
-//        text(name: 'BIOGRAPHY', defaultValue: '', description: 'Enter some information about the person')
-
-//        booleanParam(name: 'TOGGLE', defaultValue: true, description: 'Toggle this value')
-
-//        choice(name: 'CHOICE', choices: ['One', 'Two', 'Three'], description: 'Pick something')
-
-//        password(name: 'PASSWORD', defaultValue: 'SECRET', description: 'Enter a password')
-    }
-  stages {
+    stages {
     stage ('Clean npm-dev artifactory repo') {
       steps {
         options=""
         echo 'Calling script'
-        if (${params.MAX_DAYS}) {
-          options = "${options} -d ${params.MAX_DAYS}"
-        }
-        if (${params.VERBOSE}) {
-          options = "${options} -v"
-        }
-        if (${params.SKIP_LIST}) {
-          options = "${options} -S ${params.SKIP_LIST}"
-        }
+ //       if (${params.MAX_DAYS}) {
+ //         options = "${options} -d ${params.MAX_DAYS}"
+ //       }
+ //       if (${params.VERBOSE}) {
+ //         options = "${options} -v"
+ //       }
+ //       if (${params.SKIP_LIST}) {
+ //         options = "${options} -S ${params.SKIP_LIST}"
+ //       }
         withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'c376347e-4245-49fc-be2c-b4aa0ddce81f',usernameVariable: 'NAME', passwordVariable: 'WORD']]) {
-          sh "python REL-11257/npm-dev-cleaner.py ${options} -u ${NAME} -p ${WORD}"
+          sh "python REL-11257/npm-dev-cleaner.py -v -u ${NAME} -p ${WORD}"
         }
       }
     }
