--- a/REL-11257/Jenkinsfile
+++ b/REL-11257/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
   }
   post {
     always {
-      archiveArtifacts artifacts: 'log*.txt', fingerprint: true
+      archiveArtifacts artifacts: '*.txt', fingerprint: true
     }
   }
 }
